--- a/head.html
+++ b/head.html
@@ -4,7 +4,8 @@
 	<a href="updateMhs.php">Mahasiswa</a>
 	<a href="updateDosen.php">Dosen</a>
 	<a href="updateMatkul.php">Mata Kuliah</a>
-	<a href="updateTawar.php">Kuliah Tawar</a>
-	<a href="logout.php">Logout1</a>
+	<a href="updateTawar.php">Jadwal Mengajar</a>
+	<a href="updateKrs.php">KRS</a>
+	<a href="logout.php">Logout</a>
 </div>
   
